--- a/simple.html
+++ b/simple.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <!--
 	Copyright 2014 Git.Training
-	Some silly changes from the master branch
 -->
 <head>
-	<title>Lots of trouble</title>
+	<title>Lots of trouble, in a simple repo</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
